--- a/learning/pubspec.yaml
+++ b/learning/pubspec.yaml
@@ -88,3 +88,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/images/firstimage.jpg
